# pro-flight

./: .drone.yml  .gdbinit  .gitignore  .gitmodules  .projectile  .template.md  Cargo.toml  Makefile  Makefile.toml  README.md  memory.x  requirements.txt  requirements3.txt  rustfmt.toml  sample.yml  setup.cfg
.cargo/: config
boards/omnibusf4sd/: Cargo.toml  memory.x
boards/omnibusf4sd/.cargo/: config
boards/omnibusf4sd/src/: adc2_vbat.rs  main.rs  max7456_spi3.rs  max7456_spi3_tim4.rs  max7456_spi3_tim7.rs  mpu6000_spi1_tim6.rs  pwm.rs  sdcard.rs  spi1_exti4_gyro.rs  spi2_exti7_sdcard.rs  spi3_tim7_osd_baro.rs  usart1.rs  usart6.rs  usb_serial.rs
boards/omnibusf4v3/: .gdbinit  Cargo.toml  Drone.toml  default.config.yaml  memory.x
boards/omnibusf4v3-rtic/: Cargo.toml  memory.x
boards/omnibusf4v3-rtic/src/: main.rs
boards/omnibusf4v3/.cargo/: config
boards/omnibusf4v3/src/: adc2_vbat.rs  exti0_softirq.rs  flash.rs  i2c2.rs  lib.rs  main.rs  mpu6000.rs  pwm.rs  spi.rs  spi1_exti4_gyro.rs  spi2_exti7_sdcard.rs  spi3_osd_baro.rs  spi3_tim7_osd_baro.rs  thread.rs  tim7_scheduler.rs  usart1.rs  usart6.rs  usb_serial.rs  voltage_adc.rs  watchdog.rs
boards/omnibusf4v3/src/stm32f4/: mod.rs
boards/omnibusf4v3/src/tasks/: mod.rs  root.rs  usb_serial.rs
boards/simulator/: Cargo.toml  rascal.yaml
boards/simulator/src/: lib.rs  simulator.rs
chips/: Cargo.toml
chips/src/: cortex_m4.rs  lib.rs
chips/src/hal/: dma.rs
chips/src/stm32f4/: adc.rs  clock.rs  crc.rs  delay.rs  dfu.rs  dma.rs  flash.rs  mod.rs  rtc.rs  softint.rs  spi.rs  systick.rs  usart.rs  usb_serial.rs
components/: Cargo.toml
components/src/: lib.rs  max7456_ascii_hud.rs
docs/: law-protection.md  pid-tuning.md
drivers/: Cargo.toml
drivers/src/: led.rs  lib.rs  max7456.rs  mpu6000.rs  nvram.rs
drivers/src/barometer/: bmp280.rs  mod.rs
drivers/src/stm32/: mod.rs  usart.rs  usb_serial.rs  voltage_adc.rs
fixed-point/: Cargo.toml
fixed-point-macro/: Cargo.toml
fixed-point-macro/src/: lib.rs
fixed-point/src/: lib.rs
hal/: Cargo.toml
hal/src/: dma.rs  event.rs  flash.rs  lib.rs  persist.rs  rtc.rs  serial.rs  thread.rs  waker.rs
hal/src/dma/: bd.rs  meta.rs  mod.rs
scripts/: add-gplv3.sh  bytes_to_str.py  calibration.py  dfuse-pack.py  exec.py  get_telemetry.py  mag_calibration.py  mcm_to_bin.py  serial.py  telemetry.py  upload-font.py  watch_magnetometer.py
scripts/cli/: __init__.py
src/: alloc.rs  console.rs  dfu.rs  io.rs  lib.rs  logger.rs  main.rs  math.rs  max7456_spi3.rs  mpu6000_spi1.rs  sysinfo.rs  task.rs  usb_serial.rs  utils.rs
src/algorithm/: imu.rs  lpf.rs  mahony.rs  mod.rs
src/cli/: config.rs  datetime.rs  memory.rs  mod.rs  terminal.rs
src/collection/: mod.rs
src/components/: altimeter.rs  ascii_hud.rs  cli.rs  cmdlet.rs  console.rs  event.rs  flight_control.rs  flight_data_hub.rs  gnss.rs  imu.rs  logger.rs  max7456_ascii_hud.rs  mixer.rs  mod.rs  monitor.rs  mpu6000.rs  navigation.rs  osd.rs  panic.rs  positioning.rs  schedule.rs  serial.rs  servo_mixer.rs  simple_imu.rs  speedometer.rs  sysled.rs  telemetry.rs  usb_serial.rs  variometer.rs
src/components/cli/: config.rs  memory.rs  mod.rs  terminal.rs
src/components/configuration/: airplane.rs  fixed_wing.rs  mod.rs  pwm.rs  servo.rs
src/components/flight_control/: aircraft.rs  airplane.rs  basic.rs  mixer.rs  mod.rs  pid.rs
src/components/flight_data/: aviation.rs  data.rs  misc.rs  mod.rs  navigation.rs  sensor.rs
src/components/pipeline/: imu.rs  mod.rs
src/components/servo_mixer/: aircraft.rs  fixed_wing.rs  mod.rs
src/components/telemetry/: data.rs  mod.rs  status.rs
src/config/: aircraft.rs  battery.rs  board.rs  controller.rs  fcs.rs  imu.rs  inputs.rs  ins.rs  mod.rs  osd.rs  output.rs  pathset.rs  pid.rs  pwm.rs  receiver.rs  sensor.rs  serial.rs  setter.rs  yaml.rs
src/config/inputs/: axes.rs  command.rs  mod.rs  toggles.rs
src/config/peripherals/: mod.rs  pwm.rs  serial.rs
src/datastore/: mod.rs
src/datastructures/: config.rs  control.rs  coordinate.rs  decimal.rs  event.rs  fixed_point.rs  gnss.rs  input.rs  measurement.rs  mod.rs  output.rs  ring_buffer.rs  schedule.rs  u16_event.rs  vec.rs  waypoint.rs
src/datastructures/coordinate/: latitude.rs  longitude.rs  mod.rs
src/datastructures/data_source/: mod.rs  overwriting.rs  singular.rs  u16_source.rs
src/datastructures/flight/: aviation.rs  misc.rs  mod.rs  sensor.rs
src/datastructures/measurement/: axes.rs  battery.rs  displacement.rs  distance.rs  euler.rs  mod.rs  rotation.rs  unit.rs  velocity.rs  voltage.rs
src/drivers/: accelerometer.rs  bmp280.rs  gyroscope.rs  max7456.rs  mod.rs  mpu6000.rs  nvram.rs  pwm.rs  sbus.rs  sdcard.rs  serial.rs  shared_spi.rs  terminal.rs  uart.rs  usb_serial.rs
src/drivers/barometer/: bmp280.rs  global.rs  mod.rs
src/drivers/gnss/: mod.rs  nmea.rs
src/drivers/magnetometer/: global.rs  mod.rs  qmc5883l.rs
src/fcs/: envelop.rs  mod.rs  out.rs  pid.rs
src/hal/: controller.rs  imu.rs  input.rs  io.rs  mod.rs  receiver.rs  sensors.rs
src/imu/: mod.rs  out.rs
src/ins/: mod.rs  out.rs  positioning.rs  speedometer.rs  variometer.rs
src/osd/: ascii.rs
src/osd/ascii/: mod.rs  nav.rs  telemetry.rs
src/protocol/: mod.rs  rc.rs  serial.rs  xmodem.rs
src/protocol/serial/: mod.rs  sbus.rs
src/service/: ascii_hud.rs  imu.rs  mod.rs  positioning.rs  speedometer.rs  variometer.rs
src/service/aviation/: mixer.rs  mod.rs  pid.rs
src/service/cli/: mod.rs
src/service/flight/: data.rs
src/service/info/: bulletin.rs  mod.rs  stream.rs
src/service/sync/: mod.rs  trigger.rs
src/servo/: pwm.rs
src/sync/: cell.rs  event.rs  mod.rs  overwriting.rs  singular.rs
src/sys/: fs.rs  jiffies.rs  mod.rs  stdout.rs  time.rs  timer.rs
src/sys/fs/: error.rs  exfat.rs  media.rs  mod.rs
src/types/: control.rs  mod.rs  output.rs  sensor.rs  vec.rs
src/types/coordinate/: latitude.rs  longitude.rs  mod.rs
src/types/flight/: aviation.rs  misc.rs  mod.rs  navigation.rs  sensor.rs
src/types/measurement/: distance.rs  euler.rs  (+5 more)
tests/jsbsim/: run.py  simulator.py
(+24 files in other folders)
