[package]
name = "pro-flight"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
ascii = { version = "1.0", default-features = false }
ascii-osd-hud = "0.1.5"
chrono = { version = "0.4", default-features = false }
crc16 = { version = "0.4", default-features = false }
drone-core = { path = "drone-os/drone-core" }
embedded-hal = "0.2"
git-version = "0.3.4"
hal = { path = "hal" }
heapless = "0.6"
indoc = "1.0"
integer-sqrt = "0.1"
max7456 = "0.1"
micromath = "1.0"
nalgebra = { version = "0.21", default-features = false }
nb = "1"
nmea0183-core = { git = "https://github.com/qiuchengxuan/nmea0183" }
num-traits = { version = "0.2", default-features = false }
sbus-parser = { git = "https://github.com/qiuchengxuan/sbus" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core-fmt = "0.1"
void = { version = "1", default-features = false }

[lib]
name = "pro_flight"

[features]
log-level-debug = []
log-level-info = []
log-level-warning = []
log-level-error = []
sleep-ms = []
sleep-us = []
default-config = []
default = ["log-level-info"]

[dev-dependencies]
hex-literal = "0.3"
pretty_assertions = "0.4"
serial_test = "*"
serde_json = "1.0"
drone-core = { path = "drone-os/drone-core", features = ["std"] }
