[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "chips"
version = "0.0.1"

[dependencies]
chrono = { version = "0.4", default-features = false }
cortex-m = { version = "0.6", optional = true }
crc = { version = "1.8", default-features = false }
drone-core = { path = "../drone-os/drone-core" }
embedded-hal = "0.2"
futures = { version = "0.3.0", default-features = false }
hal = { path = "../hal" }
nb = "0.1"
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true }

[dependencies.drone-cortexm]
path = "../drone-os/drone-cortexm"
features = ["bit-band", "floating-point-unit", "memory-protection-unit"]
optional = true

[dependencies.drone-stm32-map]
path = "../drone-os/drone-stm32-map"
features = ["dma", "exti", "flash", "rtc", "spi"]
optional = true

[features]
default = []
stm32 = ["cortex-m", "drone-cortexm", "drone-stm32-map", "stm32f4xx-hal"]

[lib]
name = "chips"
test = false
bench = false
