[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "chips"
version = "0.0.1"

[dependencies]
chrono = { version = "0.4", default-features = false }
cortex-m = { version = "0.7", optional = true }
crc = { version = "1.8", default-features = false }
drone-core = { path = "../drone-os/drone-core" }
embedded-hal = "0.2"
fugit = "0.3"
futures = { version = "0.3.0", default-features = false }
hal = { path = "../hal" }
nb = "0.1"

[dependencies.drone-cortexm]
path = "../drone-os/drone-cortexm"
features = ["bit-band", "floating-point-unit", "memory-protection-unit"]
optional = true

[dependencies.drone-stm32-map]
path = "../drone-os/drone-stm32-map"
features = ["dma", "exti", "flash", "rtc", "spi"]
optional = true

[dependencies.stm32f4xx-hal]
version = "0.11"
features = ["stm32f405", "rt", "usb_fs"]
optional = true

[features]
default = []
stm32 = ["cortex-m", "drone-cortexm", "drone-stm32-map", "stm32f4xx-hal"]

[lib]
name = "chips"
test = false
bench = false
