[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "components"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2"

max7456 = { path = "../../max7456" }
ascii-osd-hud = { path = "../../ascii-osd-hud" }

[lib]
name = "components"
test = false
bench = false

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = "z"
