[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "drivers"
version = "0.0.1"

[dependencies]
bmp280-core = "0.2"
cortex-m = { version = "0.6", optional = true }
embedded-hal = "0.2"
fixed-point = { path = "../fixed-point" }
hal = { path = "../hal" }
log = { version = "0.4", default-features = false }
max7456 = { git = "https://github.com/qiuchengxuan/max7456.git" }
mpu6000 = { git = "https://github.com/qiuchengxuan/mpu6000.git" }
nb = "0.1"
peripheral-register = "0.1.4"
pro-flight = { path = "../", default-features = false }
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[dependencies.stm32f4xx-hal]
version = "0.9.0"
features = ["stm32f405", "rt", "usb_fs"]
optional = true

[features]
default = []
stm32 = ["stm32f4xx-hal", "cortex-m"]

[lib]
name = "drivers"
test = false
bench = false
