[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "drivers"
version = "0.0.1"

[dependencies]
bmp280-core = "0.2"
cortex-m = { version = "0.7", optional = true }
embedded-hal = "0.2"
fixed-point = { version = "1.0", default-features = false, features = ["serde"] }
fugit = "0.3"
hal = { path = "../hal" }
log = { version = "0.4", default-features = false }
max7456 = { git = "https://github.com/qiuchengxuan/max7456.git" }
mpu6000 =  "0.3"
nb = "0.1"
peripheral-register = "0.1.4"
pro-flight = { path = "../", default-features = false }
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[dependencies.stm32f4xx-hal]
version = "0.11"
features = ["stm32f405", "rt", "usb_fs"]
optional = true

[features]
default = []
stm32 = ["stm32f4xx-hal", "cortex-m"]

[lib]
name = "drivers"
test = false
bench = false
