[package]
name = "fixed-point-macro"
version = "1.0.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"

[lib]
name = "fixed_point_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
fixed-point = { path = "../fixed-point" }
