[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "omnibusf4sd"
version = "0.1.0"

[dependencies]
# alloc-cortex-m = "0.3.5"
cast = { version = "0.2.2", default-features = false }
cortex-m = { version = "0.6", features = ["inline-asm"] }
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
cortex-m-systick-countdown = "0.1"
embedded-hal = "0.2"
nb = "0.1"
panic-halt = "0.2"
panic-semihosting = "0.5"
stm32f4xx-hal = { version = "0.8", features = ["stm32f405", "rt", "usb_fs"] }
usb-device = "0.2"
usbd-serial = "0.1.0"

btoi = { version = "0.4", default-features = false }
arrayvec = { version = "0.5", default-features = false, features = ["array-sizes-33-128"]}

chips = { path = "../../chips" }
rs-flight = { path = "../../" }

mpu6000 = { path = "../../../mpu6000" }
max7456 = { path = "../../../max7456" }
sbus = "0.2.2"
embedded-sdmmc = "0.3.0"

[[bin]]
name = "omnibusf4sd"
test = false
bench = false

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = "z"
