[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "omnibusf4v3"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.4"
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
chips = { path = "../../chips", features = ["stm32f4xx-hal"] }
rs-flight = { path = "../../" }
stm32f4xx-hal = { version = "0.8", features = ["stm32f405", "rt", "usb_fs"] }

[[bin]]
name = "omnibusf4v3"
test = false
bench = false

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
