[package]
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "omnibusf4v3"
version = "0.1.0"

[dependencies]
alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m" }
arrayvec = { version = "0.5", default-features = false, features = ["array-sizes-33-128"] }
ascii-osd-hud = { git = "https://github.com/qiuchengxuan/ascii-osd-hud" }
bmp280-core = "0.1"
cast = { version = "0.2.2", default-features = false }
chips = { path = "../../chips", features = ["stm32f4xx-hal"] }
cortex-m = "0.6"
cortex-m-rt = "0.6"
crc = { version = "1.8", default-features = false }
embedded-hal = "0.2"
embedded-sdmmc = "0.3"
# prevent compile log module referenced in embedded-sdmmc
log = { version = "0.4", features = ["max_level_off"] }
mpu6000 = "0.1"
max7456 = "0.1"
nb = "0.1"
rs-flight = { path = "../../" }
sbus-parser = { git = "https://github.com/qiuchengxuan/sbus" }
stm32f4xx-hal = { version = "0.8", features = ["stm32f405", "rt", "usb_fs"] }
sval = { version = "0.5", features = ["derive"] }
sval_json = "0.5"

[[bin]]
name = "omnibusf4v3"
test = false
bench = false

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
