[package]
name = "omnibusf4v3"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "omnibusf4v3"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]

[dependencies]
chrono = { version = "0.4", default-features = false }
cortex-m = "0.6"
chips = { path = "../../chips", features = ["stm32"] }
drone-core = { path = "../../drone-os/drone-core" }
drivers = { path = "../../drivers", features = ["stm32"] }
embedded-hal = "0.2"
futures = { version = "0.3.0", default-features = false }
hal = { path = "../../hal" }
log = { version = "0.4", default-features = false }
synopsys-usb-otg = { version = "0.2.4", features = ["cortex-m"], optional = true }

[dependencies.drone-cortexm]
path = "../../drone-os/drone-cortexm"
features = ["bit-band", "floating-point-unit", "memory-protection-unit"]

[dependencies.drone-stm32-map]
path = "../../drone-os/drone-stm32-map"
features = ["dma", "exti", "flash", "rtc", "spi"]

[dependencies.pro-flight]
path = "../.."
default-features = false
features = ["sleep-ms", "default-config"]

[dependencies.stm32f4xx-hal]
version = "0.9.0"
features = ["stm32f405", "rt", "usb_fs"]

[profile.release]
lto = true
debug = true
panic = "abort"
codegen-units = 1
opt-level = "z"
