[package]
name = "simulator"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simulator"
path = "src/bin/main.rs"
test = false
doc = false

[dependencies]
actix-web = "3"
async-std = "1.9"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = "2.33"
env_logger = "0.9"
fugit = "0.3"
hal = { path = "../../hal" }
log = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pro-flight]
path = "../.."
default-features = false
features = ["std"]
